@@ -134,7 +134,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * The class implements the method resolution for operators like (+, -, *, /, %, |,&, ^). The  * resolution logic is as follows:  * 1. The resolver first tries to find an exact parameter match.  * 2. If 1 fails then it returns the evaluate(Double, Double) method.  */
+comment|/**  * The class implements the method resolution for operators like   * (+, -, *, %). The resolution logic is as follows:  *   * 1. If one of the parameters is a string, then it resolves to  *    evaluate(double, double)  * 2. If one of the parameters is null, then it resolves to evaluate(T, T)  *    where T is the other non-null parameter type.  * 3. If both of the parameters are null, then it resolves to   *    evaluate(byte, byte)  * 4. Otherwise, it resolves to evaluate(T, T), where T is the type resulting  *    from calling FunctionRegistry.getCommonClass() on the two arguments.  */
 end_comment
 
 begin_class
@@ -188,6 +188,8 @@ name|argTypeInfos
 parameter_list|)
 throws|throws
 name|AmbiguousMethodException
+throws|,
+name|UDFArgumentException
 block|{
 assert|assert
 operator|(
@@ -207,66 +209,21 @@ name|pTypeInfos
 init|=
 literal|null
 decl_stmt|;
-if|if
-condition|(
-name|argTypeInfos
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|TypeInfoFactory
-operator|.
-name|voidTypeInfo
-argument_list|)
-operator|||
-name|argTypeInfos
-operator|.
-name|get
-argument_list|(
-literal|1
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|TypeInfoFactory
-operator|.
-name|voidTypeInfo
-argument_list|)
-condition|)
-block|{
-name|pTypeInfos
-operator|=
+name|List
+argument_list|<
+name|TypeInfo
+argument_list|>
+name|modArgTypeInfos
+init|=
 operator|new
 name|ArrayList
 argument_list|<
 name|TypeInfo
 argument_list|>
 argument_list|()
-expr_stmt|;
-name|pTypeInfos
-operator|.
-name|add
-argument_list|(
-name|TypeInfoFactory
-operator|.
-name|doubleTypeInfo
-argument_list|)
-expr_stmt|;
-name|pTypeInfos
-operator|.
-name|add
-argument_list|(
-name|TypeInfoFactory
-operator|.
-name|doubleTypeInfo
-argument_list|)
-expr_stmt|;
-block|}
-elseif|else
+decl_stmt|;
+comment|// If either argument is a string, we convert to a double because a number
+comment|// in string form should always be convertible into a double
 if|if
 condition|(
 name|argTypeInfos
@@ -298,16 +255,7 @@ name|stringTypeInfo
 argument_list|)
 condition|)
 block|{
-name|pTypeInfos
-operator|=
-operator|new
-name|ArrayList
-argument_list|<
-name|TypeInfo
-argument_list|>
-argument_list|()
-expr_stmt|;
-name|pTypeInfos
+name|modArgTypeInfos
 operator|.
 name|add
 argument_list|(
@@ -316,7 +264,7 @@ operator|.
 name|doubleTypeInfo
 argument_list|)
 expr_stmt|;
-name|pTypeInfos
+name|modArgTypeInfos
 operator|.
 name|add
 argument_list|(
@@ -324,33 +272,133 @@ name|TypeInfoFactory
 operator|.
 name|doubleTypeInfo
 argument_list|)
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|argTypeInfos
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|==
-name|argTypeInfos
-operator|.
-name|get
-argument_list|(
-literal|1
-argument_list|)
-condition|)
-block|{
-name|pTypeInfos
-operator|=
-name|argTypeInfos
 expr_stmt|;
 block|}
 else|else
 block|{
+comment|// If it's a void, we change the type to a byte because once the types
+comment|// are run through getCommonClass(), a byte and any other type T will
+comment|// resolve to type T
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|argTypeInfos
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|TypeInfoFactory
+operator|.
+name|voidTypeInfo
+argument_list|)
+condition|)
+block|{
+name|modArgTypeInfos
+operator|.
+name|add
+argument_list|(
+name|TypeInfoFactory
+operator|.
+name|byteTypeInfo
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|modArgTypeInfos
+operator|.
+name|add
+argument_list|(
+name|argTypeInfos
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+name|TypeInfo
+name|commonType
+init|=
+name|FunctionRegistry
+operator|.
+name|getCommonClass
+argument_list|(
+name|modArgTypeInfos
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|modArgTypeInfos
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|commonType
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|UDFArgumentException
+argument_list|(
+literal|"Unable to find a common class between"
+operator|+
+literal|"types "
+operator|+
+name|modArgTypeInfos
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getTypeName
+argument_list|()
+operator|+
+literal|" and "
+operator|+
+name|modArgTypeInfos
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getTypeName
+argument_list|()
+argument_list|)
+throw|;
+block|}
 name|pTypeInfos
 operator|=
 operator|new
@@ -364,21 +412,16 @@ name|pTypeInfos
 operator|.
 name|add
 argument_list|(
-name|TypeInfoFactory
-operator|.
-name|doubleTypeInfo
+name|commonType
 argument_list|)
 expr_stmt|;
 name|pTypeInfos
 operator|.
 name|add
 argument_list|(
-name|TypeInfoFactory
-operator|.
-name|doubleTypeInfo
+name|commonType
 argument_list|)
 expr_stmt|;
-block|}
 name|Method
 name|udfMethod
 init|=
